<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="hello_world">Hello world!</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_items_array">
        <item>Status</item>
        <item>Data</item>
        <item>Control</item>
        <item>Graph</item>
    </string-array>



    <!-- TEST -->

    <string name="app_name">"Smart Circuit "</string>
    <string name="title_section1">Status</string>
    <string name="title_section2">Control</string>
    <string name="title_section3">Stat</string>
    <string name="title_section4">Graph</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="channel1_name">Channel 1</string>
    <string name="channel2_name">Channel 2</string>
    <string name="channel3_name">Channel 3</string>
    <string name="channel4_name">Channel 4</string>
    <string name="channel5_name">Channel 5</string>
    <string name="setting_server_address">127.0.0.1</string>
    <string name="setting_server_port">12345</string>
    <string name="setting_username">test</string>
    <string name="setting_server_password">test</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="status_0">Power ON</string>
    <string name="status_1">Power OFF</string>
    <string name="status_2">Error</string>
    <string name="status_3">Warning</string>
    <string name="status_4">Offline</string>


    <drawable name="white">#ffffff</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="gray">#778899</drawable>
    <drawable name="red">#C11B17</drawable>

</resources>