<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="System Status"
            android:id="@+id/textView15"
            android:textSize="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Good"
            android:id="@+id/tv_status"
            android:textSize="48dp"
            android:layout_below="@+id/textView15"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/channel1_name"
            android:id="@+id/tv_ch1"
            android:layout_below="@+id/tv_status"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/channel2_name"
            android:id="@+id/tv_ch2"
            android:layout_below="@+id/tv_ch1"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/channel3_name"
            android:id="@+id/tv_ch3"
            android:layout_below="@+id/tv_ch2"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/channel4_name"
            android:id="@+id/tv_ch4"
            android:layout_below="@+id/tv_ch3"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/channel5_name"
            android:id="@+id/tv_ch5"
            android:layout_below="@+id/tv_ch4"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status_0"
            android:id="@+id/tv_ch1_status"
            android:layout_above="@+id/tv_ch2"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_alignStart="@+id/tv_ch2_status"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status_0"
            android:id="@+id/tv_ch2_status"
            android:layout_below="@+id/tv_ch1_status"
            android:padding="5dp"
            android:layout_toEndOf="@+id/tv_status"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status_0"
            android:id="@+id/tv_ch3_status"
            android:layout_below="@+id/tv_ch2_status"
            android:layout_alignStart="@+id/tv_ch2_status"
            android:padding="5dp"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status_0"
            android:id="@+id/tv_ch4_status"
            android:padding="5dp"
            android:layout_above="@+id/tv_ch5_status"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tv_ch3_status"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status_0"
            android:id="@+id/tv_ch5_status"
            android:padding="5dp"
            android:layout_alignTop="@+id/tv_ch5"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tv_ch4_status"
            android:clickable="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Power Consumption Chart"
            android:layout_below="@+id/tv_ch5"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />





    </RelativeLayout>

    <com.androidplot.pie.PieChart
        android:id="@+id/mySimplePieChart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"/>

</LinearLayout>