<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Server Address"
        android:id="@+id/tv_Setting_ServerAddress"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Setting_ServerAddress"
        android:padding="5dp"
        android:text="@string/setting_server_address"
        android:inputType="textNoSuggestions"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Server Port"
        android:id="@+id/textView4"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Setting_ServerPort"
        android:padding="5dp"
        android:text="@string/setting_server_port"
        android:inputType="number"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Username"
        android:id="@+id/tv_Setting_Username"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Setting_Username"
        android:padding="5dp"
        android:text="@string/setting_username"
        android:inputType="textNoSuggestions"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password"
        android:id="@+id/tv_Setting_Password"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_Setting_Password"
        android:padding="5dp"
        android:password="true"
        android:text="@string/setting_server_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/b_Setting_Login"
            android:padding="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"
            android:id="@+id/b_Setting_Clear"
            android:padding="5dp" />
    </TableRow>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText" />

</LinearLayout>